# Sudoku_for_SWC

./: CMakeLists.txt  README.md  Solution.cpp  Solution.h  Sudoku.cpp  Sudoku.h  unittests.cpp  代码质量测试.md
Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Solution.cpp  Sudoku.cpp  getopt.cpp  getopt.h
Project1/Debug/: CodeAnalysisResultManifest.txt  NativeCodeAnalysis.read.1.tlog  Project1.exe.recipe  Project1.ilk  Project1.vcxproj.FileListAbsolute.txt  Solution.nativecodeanalysis.sarif  Sudoku.nativecodeanalysis.sarif  endGame.txt  getopt.nativecodeanalysis.sarif  problem.txt  sudoku.txt  vc142.idb
Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
